# Guitar

./: .gitattributes  .gitignore  .travis.yml  AskPass.pro  CLAUDE.md  CMakeLists.txt  COPYRIGHT.txt  ColorEditWidget.h  ColorSlider.h  Doxy.conf  Guitar-amd64.pro  Guitar-i386.pro  Guitar.pri  Guitar.pro  Guitar_ja.qm  Guitar_ja.ts  Guitar_x86_64.pro  Info.plist  Info.plist.in  Makefile  Makefile.Debug  Makefile.Release  MyImageViewWidget.h  README.md  RELEASE-LINUX.rb  RELEASE-MACOS.rb  RELEASE-WINDOWS.rb  RELEASE_WINDOWS.rb  RebaseOntoDialog.cpp  SECURITY.md  common.pri  filetype.pri  filetype.pro  filetype2.pri  generate_src_docs.sh  git-gui  include_report.json  libfiletype.pri  libgit2_obsolete.pro  macdeploy.sh  (+13 more)
IncrementalSearch/mecab/mecab/: Makefile  Makefile.am  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  libtool  mecab-config  mecab-config.in  mecab.iss  mecabrc  mecabrc.in
IncrementalSearch/mecab/mecab-jumandic/: Demonstrative.csv  Emoticon.csv  Makefile.am  Makefile.in  Makefile.train  Noun.keishiki.csv  Noun.koyuu.csv  Prefix.csv  Suffix.csv  feature.def  left-id.def  pos-id.def  unk.def  unk.dic
IncrementalSearch/mecab/mecab-jumandic/script/: juman2mecab.pl
IncrementalSearch/mecab/mecab/csharp/: DictionaryInfo.cs  Lattice.cs  Makefile  MeCab.cs  Node.cs  Path.cs  SWIGTYPE_p_p_char.cs  Tagger.cs
IncrementalSearch/mecab/mecab/doc/: Makefile  Makefile.am  Makefile.in  index.html  mecab.html  mecab.ppt  partial.html  posid.html
extra/FileView/: CMakeLists.txt  FileView.pro  MainWindow.cpp  MainWindow.h  MainWindow.ui
filetype2/file/python/: pyproject.toml
src/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AbstractGitSession.cpp  AbstractGitSession.h  AbstractProcess.cpp  AbstractProcess.h  AbstractSettingForm.cpp  AbstractSettingForm.h  AddRepositoriesCollectivelyDialog.cpp  AddRepositoriesCollectivelyDialog.h  AddRepositoriesCollectivelyDialog.ui  AddRepositoryDialog.cpp  AddRepositoryDialog.h  AddRepositoryDialog.ui  AiApiBridge.cpp  AiApiBridge.h  ApplicationGlobal.cpp  ApplicationGlobal.h  ApplicationSettings.cpp  ApplicationSettings.h  AreYouSureYouWantToContinueConnectingDialog.cpp  AreYouSureYouWantToContinueConnectingDialog.h  AreYouSureYouWantToContinueConnectingDialog.ui  AvatarLoader.cpp  AvatarLoader.h  BasicMainWindow.cpp  BasicMainWindow.h  BasicRepositoryDialog.cpp  BasicRepositoryDialog.h  BigDiffWindow.cpp  BigDiffWindow.h  BigDiffWindow.ui  BlameWindow.cpp  BlameWindow.h  BlameWindow.ui  BlockSignals.cpp  BlockSignals.h  BranchLabel.cpp  BranchLabel.h  (+480 more)
src/ai/: AiApiBridge.cpp  AiApiBridge.h  CommitMessageGenerator.cpp  CommitMessageGenerator.h  GenerativeAI.cpp  GenerativeAI.h
src/coloredit/: ColorDialog.cpp  ColorDialog.h  ColorDialog.ui  ColorEditWidget.cpp  ColorEditWidget.h  ColorEditWidget.ui  ColorPreviewWidget.cpp  ColorPreviewWidget.h  ColorSlider.cpp  ColorSlider.h  ColorSquareWidget.cpp  ColorSquareWidget.h  RingSlider.cpp  RingSlider.h
src/common/: AbstractSimpleIO.h  base64.cpp  base64.h  charvec.h  crc32.cpp  crc32.h  fmt.h  htmlencode.cpp  htmlencode.h  joinpath.cpp  joinpath.h  jstream.h  misc.cpp  misc.h  npos.cpp  npos.h  printf.c  printf.h  qhelper.h  qmisc.cpp  qmisc.h  realpath.cpp  realpath.h  rwfile.cpp  rwfile.h  str.h  strformat.h  unicode_conversion.h  urlencode.cpp  urlencode.h  wstring.cpp  wstring.h
src/common/q/: DateTime.cpp  DateTime.h  Dir.cpp  Dir.h  DirIterator.cpp  DirIterator.h  FileInfo.cpp  FileInfo.h  helper.h
src/darktheme/: DarkStyle.cpp  DarkStyle.h  DarkStylePlugin.cpp  DarkStylePlugin.h  LightStyle.cpp  LightStyle.h  MyCommonStyle.cpp  MyCommonStyle.h  NinePatch.cpp  NinePatch.h  StandardStyle.cpp  StandardStyle.h  TraditionalWindowsStyleTreeControl.cpp  TraditionalWindowsStyleTreeControl.h  darkstylehelper.i
src/dtl/: Diff.hpp
src/inet/: curlclient.cpp  curlclient.h  inetclient.cpp  inetresolver.h  webclient.cpp  webclient.h
src/process/: .gitignore  AGENTS.md  ConPTY.md  MyProcess2.cpp  MyProcess2.h  ProcessExample.cpp  ProcessExample.h  ProcessPosix.cpp  ProcessPosix.h  ProcessWin.cpp  ProcessWin.h  README.md  conpty-worker.pro  process-example.pro  process.pri
src/process/sampleapp/: base64.h  main.cpp  misc.cpp  misc.h  unicode_conversion.cpp
src/process/src/: AbstractProcess.cpp  AbstractProcess.h  BasicProcessPosix.cpp  BasicProcessPosix.h  BasicProcessWin.cpp  BasicProcessWin.h  BasicProcessWinConPTY.cpp  BasicProcessWinConPTY.h  BasicProcessWinConPty.cpp  BasicProcessWinConPty.h  ProcessConPtyWithWorker.cpp  ProcessConPtyWithWorker.h  ProcessHelper.cpp  ProcessHelper.h  ProcessWin.cpp  ProcessWin.h  ProcessWinConPty.cpp  ProcessWinConPty.h  ProcessWinConPtyWithWorker.cpp  ProcessWinConPtyWithWorker.h  ProcessWinHelper.h  ProcessWinPty.cpp  ProcessWinPty.h
src/qtermwidget/: kprocess.h  kpty.cpp  kpty.h  kpty_p.h  kptydevice.cpp  kptydevice.h  kptyprocess.h
src/resources/: Guitar.icns  resources.qrc
src/resources/image/: guitar.ai  guitaricon.ai
src/resources/translations/: Guitar_es.qm  Guitar_es.ts  Guitar_ja.qm  Guitar_ja.ts  Guitar_ru.qm  Guitar_ru.ts  Guitar_ta.qm  Guitar_ta.ts  Guitar_zh-CN.qm  Guitar_zh-CN.ts  Guitar_zh-TW.qm  Guitar_zh-TW.ts  ja_JPN.qm  ja_JPN.ts
src/sshsupport/: ConfirmRemoteSessionDialog.cpp  ConfirmRemoteSessionDialog.h  ConfirmRemoteSessionDialog.ui  GitRemoteSshSession.cpp  GitRemoteSshSession.h  Quissh.cpp  Quissh.h  SshDialog.cpp  SshDialog.h  SshDialog.ui
src/texteditor/: AbstractCharacterBasedApplication.cpp  AbstractCharacterBasedApplication.h  InputMethodPopup.cpp  InputMethodPopup.h  TextEditorTheme.cpp  TextEditorTheme.h  TextEditorView.cpp  TextEditorView.h  TextEditorWidget.cpp  TextEditorWidget.h  UnicodeWidth.cpp  UnicodeWidth.h  unicode.cpp  unicode.h
src/unix/: UnixProcess.cpp  UnixProcess.h  UnixPtyProcess.cpp  UnixPtyProcess.h  UnixUtil.cpp  UnixUtil.h
src/win32/: Win32Process.cpp  Win32Process.h  Win32PtyProcess.cpp  Win32PtyProcess.h  Win32Util.cpp  Win32Util.h  event.cpp  thread.cpp  win32.cpp  win32.h
src/zip/: zip.cpp  zip.h  ziparchive.cpp  zipextract.cpp  zipinternal.h
(+1111 files in other folders)
